deployment2-config.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 2
  labels:
    run: test-ingress-node-2
  name: test-ingress-node-2
  namespace: default
  resourceVersion: "138760"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/test-ingress-node-2
spec:
  replicas: 1
  selector:
    matchLabels:
      run: test-ingress-node-2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: test-ingress-node-2
    spec:
      containers:
      - image: docker.io/elhay/mynodejs:1
        imagePullPolicy: Always
        name: test-ingress-node-2
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  observedGeneration: 2
  replicas: 1
  updatedReplicas: 1
